Add translation keys to dialog and notification

--- a/app/src/assets/language/ar.json
+++ b/app/src/assets/language/ar.json
@@ -113,6 +113,20 @@
       "content": "يمكن تثبيت Fevermap كتطبيق ويب متقدم. في حالة التثبيت، يمكننا تزويدك بميزات إضافية رائعة مثل وقت تشغيل أسرع والإشعارات الفورية (ستتوفر قريباً).",
       "approve_text": "تثبيت",
       "decline_text": "في وقت لاحق"
+    },
+    "notifications": {
+      "title": "Allow notifications",
+      "content": "Fevermap would like to offer you a daily notification reminding you to log your daily health status. Allow notifications?",
+      "approve_text": "Allow notifications",
+      "decline_text": "No please"
+    }
+  },
+  "notification": {
+    "daily_reminder": {
+      "title": "Good morning! \uD83D\uDE0A",
+      "content": "How are you feeling today?",
+      "healthy": "Healthy",
+      "sick": "Sick"
     }
   }
 }
