--- a/app/src/assets/language/ca.json
+++ b/app/src/assets/language/ca.json
@@ -107,6 +107,20 @@
       "content": "Fevermap es pot instal.lar com una aplicació web progressiva. Una vegada instal.lada disposaràs de funcionalitats extra, com una execució més ràpida i notificacions directes (disponibles properament).",
       "approve_text": "Instal.lar",
       "decline_text": "Ara no"
+    },
+    "notifications": {
+      "title": "Allow notifications",
+      "content": "Fevermap would like to offer you a daily notification reminding you to log your daily health status. Allow notifications?",
+      "approve_text": "Allow notifications",
+      "decline_text": "No please"
+    }
+  },
+  "notification": {
+    "daily_reminder": {
+      "title": "Good morning! \uD83D\uDE0A",
+      "content": "How are you feeling today?",
+      "healthy": "Healthy",
+      "sick": "Sick"
     }
   }
 }
