--- a/app/src/assets/language/de.json
+++ b/app/src/assets/language/de.json
@@ -112,6 +112,20 @@
       "content": "Fieberkarte kann als progressive Webapplikation installiert werden. Bei Installation können wir Dich mit tollen neuen Extrafunktionen wie schnellerer Laufzeit und Push-Benachrichtigungen versorgen (kommt bald).",
       "approve_text": "Installieren",
       "decline_text": "Vielleicht später"
+    },
+    "notifications": {
+      "title": "Allow notifications",
+      "content": "Fevermap would like to offer you a daily notification reminding you to log your daily health status. Allow notifications?",
+      "approve_text": "Allow notifications",
+      "decline_text": "No please"
+    }
+  },
+  "notification": {
+    "daily_reminder": {
+      "title": "Good morning! \uD83D\uDE0A",
+      "content": "How are you feeling today?",
+      "healthy": "Healthy",
+      "sick": "Sick"
     }
   }
 }
