--- a/app/src/assets/language/sv.json
+++ b/app/src/assets/language/sv.json
@@ -115,6 +115,20 @@
       "content": "Fevermap kan installeras som en Progressive Web App. Om du gör det fungerar appen smidigare, och vi kan ge tilläggstjänster som push-notifikationer (på kommande).",
       "approve_text": "Installera",
       "decline_text": "Kanske senare"
+    },
+    "notifications": {
+      "title": "Allow notifications",
+      "content": "Fevermap would like to offer you a daily notification reminding you to log your daily health status. Allow notifications?",
+      "approve_text": "Allow notifications",
+      "decline_text": "No please"
+    }
+  },
+  "notification": {
+    "daily_reminder": {
+      "title": "Good morning! \uD83D\uDE0A",
+      "content": "How are you feeling today?",
+      "healthy": "Healthy",
+      "sick": "Sick"
     }
   }
 }
