--- a/app/src/assets/language/it.json
+++ b/app/src/assets/language/it.json
@@ -107,6 +107,20 @@
       "content": "Fevermap può essere installato come una 'Progressive Web Application'. Se installato in questa modalità, si potrà riscontrare un aumento nelle funzionalità e prestazioni, e notificazioni push (in un futuro prossimo).",
       "approve_text": "Installa",
       "decline_text": "Forse più tardi"
+    },
+    "notifications": {
+      "title": "Allow notifications",
+      "content": "Fevermap would like to offer you a daily notification reminding you to log your daily health status. Allow notifications?",
+      "approve_text": "Allow notifications",
+      "decline_text": "No please"
+    }
+  },
+  "notification": {
+    "daily_reminder": {
+      "title": "Good morning! \uD83D\uDE0A",
+      "content": "How are you feeling today?",
+      "healthy": "Healthy",
+      "sick": "Sick"
     }
   }
 }
