--- a/app/src/assets/language/uk.json
+++ b/app/src/assets/language/uk.json
@@ -108,6 +108,20 @@
             "content": "Fevermap можна встановити як прогресивний web-додаток (PWA). В цьому випадку ми зможемо надати додаткові функції, такі як швидке використання і push-повідомлення (скоро!).",
             "approve_text": "Встановити",
             "decline_text": "Пізніше"
+        },
+        "notifications": {
+            "title": "Allow notifications",
+            "content": "Fevermap would like to offer you a daily notification reminding you to log your daily health status. Allow notifications?",
+            "approve_text": "Allow notifications",
+            "decline_text": "No please"
+        }
+    },
+    "notification": {
+        "daily_reminder": {
+            "title": "Good morning! \uD83D\uDE0A",
+            "content": "How are you feeling today?",
+            "healthy": "Healthy",
+            "sick": "Sick"
         }
     }
 }
