--- a/app/src/assets/language/cn.json
+++ b/app/src/assets/language/cn.json
@@ -96,7 +96,9 @@
       "data_entry": "成功提交条目",
       "offline_entry_queued": "处于离线状态，记录已经存入队列",
       "entry_send_failed_queued": "Submission failed. Entry has been queued.",
-      "sync_finished": "成功同步记录"
+      "sync_finished": "成功同步记录",
+      "subscribe_success": "Subscribed to push notifications successfully",
+      "unsubscribe_success": "Unsubscribed from push notifications successfully"
     },
     "error": {
       "age_not_in_range": "出生年份不在允许范围内（1900 - 2020）。",
@@ -104,7 +106,9 @@
       "location_data_invalid": "位置数据无效。",
       "api_data_invalid": "发送到API的数据无效。",
       "gender_not_set": "未设置性别。",
-      "do_not_submit_new_temp_until": "Do not submit a new temperature until %{dateTime}"
+      "do_not_submit_new_temp_until": "Do not submit a new temperature until %{dateTime}",
+      "subscribe_error": "Subscribing to push notifications failed",
+      "unsubscribe_error": "Unsubscribing from push notifications failed"
     }
   },
   "dialog": {
@@ -127,6 +131,8 @@
       "content": "How are you feeling today?",
       "healthy": "Healthy",
       "sick": "Sick"
-    }
+    },
+    "subscribe_to_notifications": "Subscribe to notifications",
+    "unsubscribe_from_notifications": "Unsubscribe from notifications"
   }
 }
