--- a/app/src/assets/language/ja.json
+++ b/app/src/assets/language/ja.json
@@ -98,7 +98,9 @@
       "data_entry": "データ入力が正常に送信されました",
       "offline_entry_queued": "オフラインのようです。エントリーはキューに入れられました。",
       "entry_send_failed_queued": "提出に失敗しました。エントリーはキューに入れられました。",
-      "sync_finished": "エントリを同期しました。"
+      "sync_finished": "エントリを同期しました。",
+      "subscribe_success": "Subscribed to push notifications successfully",
+      "unsubscribe_success": "Unsubscribed from push notifications successfully"
     },
     "error": {
       "age_not_in_range": "指定された生年は許容範囲内ではありません（1900 ～ 2020）。",
@@ -106,7 +108,9 @@
       "location_data_invalid": "提供された位置情報は無効です。",
       "api_data_invalid": "APIに送信されたデータは無効です。",
       "gender_not_set": "性別が設定されていません。",
-      "do_not_submit_new_temp_until": "%{dateTime}まで新しい温度を送信しないでください。"
+      "do_not_submit_new_temp_until": "%{dateTime}まで新しい温度を送信しないでください。",
+      "subscribe_error": "Subscribing to push notifications failed",
+      "unsubscribe_error": "Unsubscribing from push notifications failed"
     }
   },
   "dialog": {
@@ -115,6 +119,8 @@
       "content": "Fevermapはプログレッシブウェブアプリケーションとしてインストールできます。インストールされている場合は、ランタイムの高速化やプッシュ通知（近日公開）などの優れた追加機能を提供できます。",
       "approve_text": "インストール",
       "decline_text": "いいえ、後で"
-    }
+    },
+    "subscribe_to_notifications": "Subscribe to notifications",
+    "unsubscribe_from_notifications": "Unsubscribe from notifications"
   }
 }
