--- a/app/src/assets/language/pl.json
+++ b/app/src/assets/language/pl.json
@@ -96,7 +96,9 @@
       "data_entry": "Wysłanie wpisu powiodło się",
       "offline_entry_queued": "Wygląda na to, że jesteś off-line. Wpisy zostały zakolejkowane.",
       "entry_send_failed_queued": "Submission failed. Entry has been queued.",
-      "sync_finished": "Pomyślnie zsynchronizowano wpisy."
+      "sync_finished": "Pomyślnie zsynchronizowano wpisy.",
+      "subscribe_success": "Subscribed to push notifications successfully",
+      "unsubscribe_success": "Unsubscribed from push notifications successfully"
     },
     "error": {
       "age_not_in_range": "Data urodzin nie mieści się w oczekiwanym zakresie (1900 - 2020).",
@@ -104,7 +106,9 @@
       "location_data_invalid": "Podana lokacja jest nieprawidłowa.",
       "api_data_invalid": "Dane wysłane do API były nieprawidłowe.",
       "gender_not_set": "Nie ustawiono płci.",
-      "do_not_submit_new_temp_until": "Nie wysyłaj nowych temperatur do %{dateTime}"
+      "do_not_submit_new_temp_until": "Nie wysyłaj nowych temperatur do %{dateTime}",
+      "subscribe_error": "Subscribing to push notifications failed",
+      "unsubscribe_error": "Unsubscribing from push notifications failed"
     }
   },
   "dialog": {
@@ -127,6 +131,8 @@
       "content": "How are you feeling today?",
       "healthy": "Healthy",
       "sick": "Sick"
-    }
+    },
+    "subscribe_to_notifications": "Subscribe to notifications",
+    "unsubscribe_from_notifications": "Unsubscribe from notifications"
   }
 }
