--- a/app/src/assets/language/be.json
+++ b/app/src/assets/language/be.json
@@ -126,7 +126,7 @@
   },
   "notification": {
     "daily_reminder": {
-      "title": "Good morning! \uD83D\uDE0A",
+      "title": "Good evening! \uD83D\uDE0A",
       "content": "How are you feeling today?",
       "healthy": "Healthy",
       "sick": "Sick"
