--- a/app/src/assets/language/en.json
+++ b/app/src/assets/language/en.json
@@ -4,9 +4,9 @@
   "fevermap_title": "Fevermap",
   "back": "Back",
   "today": "Today",
-  "user_description": "You are a %{age} -year-old %{gender}, with %{diagnosis}",
-  "a_covid_diagnosis": "a COVID-19 diagnosis",
-  "no_covid_diagnosis": "no COVID-19 diagnosis",
+  "user_description": "You are a %{age} -year-old %{gender}, with %{diagnosis} diagnosis",
+  "a_covid_diagnosis": "positive COVID-19",
+  "no_covid_diagnosis": "no positive COVID-19",
 
   "landing": {
     "about": "About",
